--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,146 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: rgb(255, 255, 255);   
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+.principal {
+    text-align: center;
+} 
+.faixaBranca {
+    background-color: rgb(205, 133, 63); /* Cor branca */
+    height: 70px; /* Altura da faixa branca */
+    width: 100%;
+    position: absolute;
+    top: 5%; /* Posição vertical central */
+    left: 0;
+    transform: translateY(-50%);
+    z-index: 1;
+    margin-top: 3px;
+}
+.content {
+    color: #ffffff; /* Cor do texto */
+    margin-left: 300px;
+    padding: 15px;
+}
+.imagem {
+    height: calc(111vh - 70px);
+    width: 100%;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/0/09/Morro_da_Cruz%2C_Florian%C3%B3polis_-_SC%2C_Brazil_-_panoramio_%28cropped%29.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    padding-top: 70px;
+}
+.imagem::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.bemVindo {
+    color: #000000;
+    text-align: center;
+    margin-top: 100px;
+    height: 100px;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    font-size:24px;
+    letter-spacing: 2px;
+    word-spacing: -2px;
+    color: white;
+    position: relative;
+    z-index: 1;
+}
+.titulo{
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+#comecar {
+    margin-top: 150px;
+    width: 90px;
+    height: 30px;
+    background-color: rgb(205, 133, 63);
+    border: none;
+    transition: 0.4s ease;
+    color: black;
+    cursor: pointer;
+    font-weight: 1000;
+    font-family: "DM Serif Display", serif;
+    font-style: normal;
+    letter-spacing: 1px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#comecar:hover {
+    transform: scale(1.1);
+}
+.content2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 830px;
+    margin-right: auto;
+    margin-top: -74px;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    background-color: rgb(255, 255, 255);
+    width: 540px;
+    height: 70px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.home {
+    padding: 4px;
+    width: 70px;
+    height: 30px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(145, 133, 133);
 }
+.imoveis {
+    padding: 4px;
+    width: 70px;
+    height: 30px;
+    text-align: center;
+}
+.quemsou {
+    padding: 4px;
+    width: 120px;
+    height: 30px;
+    text-align: center;
+}
+.contato {
+    padding: 4px;
+    width: 80px;
+    height: 30px;
+    text-align: center;
+}
+.wpp {  
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+      
+.logo {
+    height: 50px; /* ajuste conforme necessário */
+}
+
